--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -13,20 +13,30 @@
                         <!-- END RESPONSIVE SEARCH FORM -->
                     </li>
                     <li class="nav-item" ui-sref-active="active">
-                        <a class="nav-link" href="javascript:;"> <i class="fa fa-th-large"></i> <span class="title">Dashboard</span> <span class="arrow"></span> </a>
+                        <a class="nav-link" href="javascript:;"> <i class="fa fa-th-large"></i> <span class="title">Trends</span> </a>
+                    </li>
+                    <li class="nav-item" ui-sref-active="active">
+                        <a class="nav-link" href="javascript:;"> <i class="fa fa-th-large"></i> <span class="title">Transactions</span> <span class="arrow"></span> </a>
                         <ul class="sub-menu">
                             <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Dashboard 1</span> </a>
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Portafolio</span> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard2"> <span class="title">Dashboard 2</span> </a>
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Per ATM</span> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard3"> <span class="title">Dashboard 3</span> </a>
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">By Day</span> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard4"> <span class="title">Dashboard 4</span> </a>
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">By Type</span> </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Trends</span> </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Segmentation</span> </a>
+                            </li>
+
                         </ul>
                     </li>
                 </ul>
