--- a/views/login.html
+++ b/views/login.html
@@ -1,26 +1,67 @@
+<div class="login-layout-full login">
+<div class="page-brand-info">
+  <div class="brand">
+    <h1 class="logo_txt">{{template.tit_main}}</h1>
+    <!--<img class="brand-img" src="http://fliteatm.com/images/home/page1_img6.jpg" alt="..."> </div>-->
+  <p class="font-size-20">
+    Your one-stop shop for off-premise ATM expansion
+    <ul class="list-unstyled m-t-md">
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        Fastest to-market Access
+      </li>
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        Exclusive and Customized Branding
+      </li>
 
-<div >
-	<div class="middle-box text-center loginscreen ">
-		<div class="widgets-container">
-			<div>
-				<h1 class="logo-name">A-BAG</h1>
-			</div>
-			<h3>Welcome to Admin-Bag</h3>
-			<p>fully responsive admin dashboard template built with Bootstrap Framework, HTML5 and CSS3, Media query. </p>
-			<p>Login in. To see it in action.</p>
-			<form action="index.html" class="top15">
-				<div class="form-group">
-					<input type="email" required="" placeholder="Username" class="form-control">
-				</div>
-				<div class="form-group">
-					<input type="password" required="" placeholder="Password" class="form-control">
-				</div>
-				<button class="btn green block full-width bottom15" type="submit">Login</button>
-				<a href="#/forgot_password"><small>Forgot password?</small></a>
-				<p class="text-muted text-center"><small>Do not have an account?</small></p>
-				<a href="#/register" class="btn btn-sm btn-white btn-block">Create an account</a>
-			</form>
-			<p class="top15"> <small>Admin-Bag is easy to use and customize &copy; 2016-2017</small> </p>
-		</div>
-	</div>
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        Professionally Managed Facilities
+      </li>
+
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        ATM Locations Listings
+      </li>
+
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        Take a 360 Site Tour
+      </li>
+      <li>
+        <span class="fa fa-check m-r-xs"></span>
+        View Drone Video
+      </li>
+
+    </ul>
+  </p>
+  </div>
+
+</div>
+<div class="loginColumns ">
+  <div class="login_logo">
+    <!--<h1 class="logo-name">{{template.logoname}}</h1>-->
+    <img class="brand-img" src="http://fliteatm.com/images/logo.png" alt="...">
+
+  </div>
+  <h3>Welcome to {{template.titleform}}</h3>
+  <p>{{template.description}}</p>
+  <p>Login in.</p>
+  <!--<form action="index.html" ng-submit="enter()"  class="top15">-->
+    <div class="form-group">
+      <input required="" placeholder="Username" class="form-control" type="email">
+    </div>
+    <div class="form-group">
+      <input required="" placeholder="Password" class="form-control" type="password">
+    </div>
+    <p ng-if="loading">... Loading dashboards</p>
+    <button class="btn green block full-width bottom15"  ng-click="enter()">Login</button>
+    <a href="#/forgot_password"><small>Forgot password?</small></a>
+    <p class="text-muted text-center"><small>Do not have an account?</small></p>
+    <a href="register_v2.html" class="btn btn-sm btn-white btn-block">Create an account</a>
+<!--  </form>-->
+  <p class=" copyR"> <small>{{template.footer}} &copy; 2016-2017</small> </p>
+</div>
+
 </div>
