--- a/views/common/navigation.html
+++ b/views/common/navigation.html
@@ -13,32 +13,15 @@
                         <!-- END RESPONSIVE SEARCH FORM -->
                     </li>
                     <li class="nav-item" ui-sref-active="active">
-                        <a class="nav-link" href="javascript:;"> <i class="fa fa-th-large"></i> <span class="title">Trends</span> </a>
+                        <a class="nav-link" href="javascript:;"> <i class="fa fa-group"></i> <span class="title">Users</span> </a>
                     </li>
                     <li class="nav-item" ui-sref-active="active">
-                        <a class="nav-link" href="javascript:;"> <i class="fa fa-th-large"></i> <span class="title">Transactions</span> <span class="arrow"></span> </a>
-                        <ul class="sub-menu">
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Portafolio</span> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Per ATM</span> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">By Day</span> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">By Type</span> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Trends</span> </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" ui-sref="dashboard1"> <span class="title">Segmentation</span> </a>
-                            </li>
-
-                        </ul>
+                        <a class="nav-link" href="javascript:;"> <i class="fa fa-user-circle-o"></i> <span class="title">Roles</span> </a>
                     </li>
+                    <li class="nav-item" ui-sref-active="active">
+                        <a class="nav-link" href="javascript:;"> <i class="fa fa-address-card-o"></i> <span class="title">Roles- Users</span> </a>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
