--- a/views/common/header.html
+++ b/views/common/header.html
@@ -1,4 +1,4 @@
-    <div class="page-header navbar navbar-fixed-top">
+    <div class="page-header navbar navbar-fixed-top" ng-controller="navegationtabCtrl">
         <!-- BEGIN HEADER INNER -->
         <div class="page-header-inner ">
             <!-- BEGIN LOGO -->
@@ -111,7 +111,7 @@
                                 <a href="#/lockscreen"> <i class="icon-lock"></i> Lock Screen </a>
                             </li>
                             <li>
-                                <a href="#/login"> <i class="icon-key"></i> Log Out </a>
+                                <a ng-click="logout()"> <i class="icon-key"></i> Log Out </a>
                             </li>
                         </ul>
                     </li>
