--- a/views/forgot_password.html
+++ b/views/forgot_password.html
@@ -5,7 +5,7 @@
 	<div class="passwordBox">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="widgets-container">
+				<div class="widgets-container card-flite">
 					<h2 class="font-bold">Forgot password</h2>
 					<p> Enter your email address and your password will be reset and emailed to you. </p>
 					<div class="row">
