--- a/views/login.html
+++ b/views/login.html
@@ -1,67 +1,70 @@
 <div class="login-layout-full login">
-<div class="page-brand-info">
-  <div class="brand">
-    <h1 class="logo_txt">{{template.tit_main}}</h1>
-    <!--<img class="brand-img" src="http://fliteatm.com/images/home/page1_img6.jpg" alt="..."> </div>-->
-  <p class="font-size-20">
-    Your one-stop shop for off-premise ATM expansion
-    <ul class="list-unstyled m-t-md">
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        Fastest to-market Access
-      </li>
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        Exclusive and Customized Branding
-      </li>
-
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        Professionally Managed Facilities
-      </li>
-
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        ATM Locations Listings
-      </li>
-
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        Take a 360 Site Tour
-      </li>
-      <li>
-        <span class="fa fa-check m-r-xs"></span>
-        View Drone Video
-      </li>
-
-    </ul>
-  </p>
+  <div class="page-brand-info">
+    <div class="brand">
+      <h1 class="logo_txt">{{template.tit_main}}</h1>
+      <!--<img class="brand-img" src="http://fliteatm.com/images/home/page1_img6.jpg" alt="..."> </div>-->
+      <p class="font-size-20">
+        Your one-stop shop for off-premise ATM expansion
+        <ul class="list-unstyled m-t-md">
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            Fastest to-market Access
+          </li>
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            Exclusive and Customized Branding
+          </li>
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            Professionally Managed Facilities
+          </li>
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            ATM Locations Listings
+          </li>
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            Take a 360 Site Tour
+          </li>
+          <li>
+            <span class="fa fa-check m-r-xs"></span>
+            View Drone Video
+          </li>
+        </ul>
+      </p>
+    </div>
   </div>
-
-</div>
-<div class="loginColumns ">
-  <div class="login_logo">
-    <!--<h1 class="logo-name">{{template.logoname}}</h1>-->
-    <img class="brand-img" src="http://fliteatm.com/images/logo.png" alt="...">
-
-  </div>
-  <h3>Welcome to {{template.titleform}}</h3>
-  <p>{{template.description}}</p>
-  <p>Login in.</p>
-  <!--<form action="index.html" ng-submit="enter()"  class="top15">-->
+  <div class="loginColumns ">
+    <div class="login_logo">
+      <!--<h1 class="logo-name">{{template.logoname}}</h1>-->
+      <img class="brand-img" src="http://fliteatm.com/images/logo.png" alt="...">
+    </div>
+    <h3>Welcome to {{template.titleform}}</h3>
+    <p>{{template.description}}</p>
+    <p>Login in.</p>
+    <!--<form action="index.html" ng-submit="enter()"  class="top15">-->
     <div class="form-group">
-      <input required="" placeholder="Username" class="form-control" type="email">
+      <input required="" ng-disabled="put_token" ng-model="user.username" placeholder="Username" class="form-control" type="email">
     </div>
     <div class="form-group">
-      <input required="" placeholder="Password" class="form-control" type="password">
+      <input ng-disabled="put_token" placeholder="Password" ng-model="user.password" class="form-control" type="password">
     </div>
-    <p ng-if="loading">... Loading dashboards</p>
-    <button class="btn green block full-width bottom15"  ng-click="enter()">Login</button>
-    <a href="#/forgot_password"><small>Forgot password?</small></a>
-    <p class="text-muted text-center"><small>Do not have an account?</small></p>
-    <a href="register_v2.html" class="btn btn-sm btn-white btn-block">Create an account</a>
-<!--  </form>-->
-  <p class=" copyR"> <small>{{template.footer}} &copy; 2016-2017</small> </p>
-</div>
-
+    <div class="form-group" ng-show="put_token">
+      <input required="" placeholder="Token" ng-model="user.token" class="form-control" type="token">
+    </div>
+    <div class="alert alert-danger alert-dismissable fade in" ng-show="haserror">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong>Error! </strong> {{srv_message}}
+    </div>
+    <div class="alert alert-success alert-dismissable fade in" ng-show="token_sent">
+      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <strong>Success! </strong> {{srv_message}}
+    </div>
+    <!--<p ng-if="loading">... Loading dashboards</p>-->
+    <button class="btn green block full-width bottom15"  ng-click="enter()" ng-hide="put_token">Login</button>
+    <button class="btn green block full-width bottom15"  ng-click="access()" ng-show="put_token">Access with token</button>
+    <a ui-sref="forgot_password" class="btn btn-sm btn-white btn-block"  ng-hide="put_token">Forgot password?</a>
+    <!--  </form>-->
+    <p class=" copyR"> <small>{{template.footer}} &copy; 2016-2017</small> </p>
+  </div>
 </div>
